--- a/ContosoUniversity后台作业/ContosoUniversity/ContosoUniversity/bin/ContosoUniversity.dll.config
+++ b/ContosoUniversity后台作业/ContosoUniversity/ContosoUniversity/bin/ContosoUniversity.dll.config
@@ -63,11 +63,11 @@
     </modules>
   </system.webServer>
   <entityFramework>
-    <contexts>
+    <!--<contexts>
       <context type="ContosoUniversity.DAL.SchoolContext, ContosoUniversity">
         <databaseInitializer type="ContosoUniversity.DAL.SchoolInitializer, ContosoUniversity" />
       </context>
-    </contexts>
+    </contexts>-->
     <defaultConnectionFactory type="System.Data.Entity.Infrastructure.LocalDbConnectionFactory, EntityFramework">
       <parameters>
         <parameter value="mssqllocaldb" />
@@ -78,6 +78,6 @@
     </providers>
   </entityFramework>
   <connectionStrings>
-    <add name="SchoolContext" connectionString="Data Source=(LocalDb)\MSSQLLocalDB;Initial Catalog=ContosoUniversity10;Integrated Security=SSPI;" providerName="System.Data.SqlClient" />
+    <add name="SchoolContext" connectionString="Data Source=(LocalDb)\MSSQLLocalDB;Initial Catalog=ContosoUniversity;Integrated Security=SSPI;" providerName="System.Data.SqlClient" />
   </connectionStrings>
 </configuration>
